--- a/0. Setup and Installation.ipynb
+++ b/0. Setup and Installation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"images\\install0.png\" style=\"float: right;\"  width=250 height=250 />\n",
+    "<img src=\"images/install0.png\" style=\"float: right;\"  width=250 height=250 />\n",
     "\n",
     "# Setup and Installation\n",
     "\n",
@@ -36,13 +36,13 @@
     "### Windows\n",
     "if you run the exe file then you see window simmilar to this image\n",
     "\n",
-    "<img src=\"images\\install.PNG\"  width=550 height=550 />\n",
+    "<img src=\"images/install.PNG\"  width=550 height=550 />\n",
     "\n",
     "Select <b>add Python 3.x to PATH</b> and click on <b>Install Now</b>\n",
     "\n",
     "Once the installation is finished you will see window simmilar to this\n",
     "\n",
-    "<img src=\"images\\install2.PNG\"  width=550 height=550 />"
+    "<img src=\"images/install2.PNG\"  width=550 height=550 />"
    ]
   },
   {
@@ -77,21 +77,21 @@
     "### Windows\n",
     "Follows the step mentioned in the bellow images to install anaconda distribution on a window operating system.\n",
     "\n",
-    "<img src=\"images\\anaconda.PNG\"  width=550 height=550 />\n",
+    "<img src=\"images/anaconda.PNG\"  width=550 height=550 />\n",
     "\n",
-    "<img src=\"images\\anaconda1.PNG\"  width=550 height=550 />\n",
+    "<img src=\"images/anaconda1.PNG\"  width=550 height=550 />\n",
     "\n",
-    "<img src=\"images\\anaconda2.PNG\"  width=550 height=550 />\n",
+    "<img src=\"images/naconda2.PNG\"  width=550 height=550 />\n",
     "\n",
-    "<img src=\"images\\anaconda3.PNG\"  width=550 height=550 />\n",
+    "<img src=\"images/anaconda3.PNG\"  width=550 height=550 />\n",
     "\n",
-    "<img src=\"images\\anaconda4.PNG\"  width=550 height=550 />\n",
+    "<img src=\"images/anaconda4.PNG\"  width=550 height=550 />\n",
     "\n",
-    "<img src=\"images\\anaconda5.PNG\"  width=550 height=550 />\n",
+    "<img src=\"images/anaconda5.PNG\"  width=550 height=550 />\n",
     "\n",
-    "<img src=\"images\\anaconda6.PNG\"  width=550 height=550 />\n",
+    "<img src=\"images/anaconda6.PNG\"  width=550 height=550 />\n",
     "\n",
-    "<img src=\"images\\anaconda7.PNG\"  width=550 height=550 />"
+    "<img src=\"images/anaconda7.PNG\"  width=550 height=550 />"
    ]
   },
   {
@@ -103,15 +103,15 @@
     "The download link will download sh file something like Anaconda3-2021.05-Linux-x86_64.sh.<br>\n",
     "Follows the step mentioned in the bellow images to install anaconda distribution on a ubuntu operating system.\n",
     "\n",
-    "<img src=\"images\\anaconda8.png\"  width=550 height=550 />\n",
+    "<img src=\"images/anaconda8.png\"  width=550 height=550 />\n",
     "\n",
-    "<img src=\"images\\anaconda9.png\"  width=550 height=550 />\n",
+    "<img src=\"images/anaconda9.png\"  width=550 height=550 />\n",
     "\n",
-    "<img src=\"images\\anaconda10.png\"  width=550 height=550 />\n",
+    "<img src=\"images/anaconda10.png\"  width=550 height=550 />\n",
     "\n",
-    "<img src=\"images\\anaconda11.png\"  width=550 height=550 />\n",
+    "<img src=\"images/anaconda11.png\"  width=550 height=550 />\n",
     "\n",
-    "<img src=\"images\\anaconda12.png\"  width=550 height=550 />"
+    "<img src=\"images/anaconda12.png\"  width=550 height=550 />"
    ]
   },
   {
@@ -126,11 +126,11 @@
     "\n",
     "You can go to the colab site using this <a href=\"https://colab.research.google.com/notebooks/intro.ipynb\">link</a>. Just login in to your google account and open the new notebook file \n",
     "\n",
-    "<img src=\"images\\colab.png\"  width=550 height=550 />\n",
+    "<img src=\"images/colab.png\"  width=550 height=550 />\n",
     "\n",
     "Once the notebook is opened you can run your python script easily.\n",
     "\n",
-    "<img src=\"images\\colab1.png\"  width=550 height=550 />\n",
+    "<img src=\"images/colab1.png\"  width=550 height=550 />\n",
     "\n",
     " For quick introduction on google colab watch this <a href=\"https://www.youtube.com/watch?v=inN8seMm7UI\">video tutorial<a>"
    ]
