--- a/0. Setup and Installation.ipynb
+++ b/0. Setup and Installation.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "<img src=\"images/anaconda1.PNG\"  width=550 height=550 />\n",
     "\n",
-    "<img src=\"images/naconda2.PNG\"  width=550 height=550 />\n",
+    "<img src=\"images/anaconda2.PNG\"  width=550 height=550 />\n",
     "\n",
     "<img src=\"images/anaconda3.PNG\"  width=550 height=550 />\n",
     "\n",
