Setup and Installation

--- a/Setup and Installation.ipynb
+++ b/Setup and Installation.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<img src=\"images/install0.png\" style=\"float: right;\"  width=250 height=250 />\n",
     "\n",
-    "# Setup and Installation\n",
+    "# Setup And Installation\n",
     "\n",
     "- [Basic Python Setup](#Python)\n",
     "    - [Windows](#Windows)\n",
