--- a/Operators.ipynb
+++ b/Operators.ipynb
@@ -52,7 +52,7 @@
     "----\n",
     "<a id='Arithmetic_Operators'></a>\n",
     "#  Arithmetic Operators\n",
-    "#### used to perform arithmatic operation on operands"
+    "#### used to perform an arithmetic operation operation on operands"
    ]
   },
   {
@@ -69,7 +69,18 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "2+6"
    ]
@@ -78,7 +89,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The + operator can be used to concatinate two strings"
+    "The + operator can be used to concatenate two strings"
    ]
   },
   {
@@ -228,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +248,7 @@
        "(float, int)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +268,7 @@
        "5"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +297,7 @@
        "1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Precedance of Arithmetic Operators"
+    "## Precedence of Arithmetic Operators"
    ]
   },
   {
@@ -402,7 +413,7 @@
     "-----\n",
     "<a id='Comparison_Operators'></a>\n",
     "# Comparison Operators\n",
-    "#### used to perform comparision between given two operators and return a boolean value (true/false) depending on condition\n",
+    "#### used to perform the comparison between given two operators and return a boolean value (true/false) depending on the condition\n",
     "    "
    ]
   },
@@ -603,7 +614,7 @@
     "--------\n",
     "<a id='Logical_Operators'></a>\n",
     "# Logical Operators\n",
-    "#### used to perform bolean operations and return true/false depending on operation"
+    "#### used to perform boolean operations and return true/false depending on the operation"
    ]
   },
   {
@@ -639,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +734,7 @@
     }
    ],
    "source": [
-    "# returns the last value of the variable if all values are true/non zero\n",
+    "# returns the last value of the variable if all values are true/non-zero\n",
     "print(7 and 5)\n",
     "print(\"aaabbb\" and \"bbbaaa\")"
    ]
@@ -805,7 +816,7 @@
     "<a id='Bitwise_Operators'></a>\n",
     "-----\n",
     "# Bitwise  Operators\n",
-    "#### used to perform binary operation on the operand"
+    "#### used to perform a binary operation on the operand"
    ]
   },
   {
@@ -874,7 +885,7 @@
    "source": [
     "<a id='Bitwise_Not'></a>\n",
     "## ~ Bitwise Not\n",
-    "Returns one’s compliement of the number."
+    "Returns one’s complement of the number."
    ]
   },
   {
@@ -1067,7 +1078,7 @@
     "-----\n",
     "<a id='Membership_Operators'></a>\n",
     "# Membership  Operators\n",
-    "#### used to check if the values (or variable) is present in a sequence {dict, list, touple, string, set}"
+    "#### used to check if the values (or variable) is present in a sequence {dict, list, tuple, string, set}"
    ]
   },
   {
@@ -1106,7 +1117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "for dictionary key value are compared with in operator value"
+    "for dictionary key values are compared with in operator value"
    ]
   },
   {
@@ -1205,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1225,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
