--- a/Operators.ipynb
+++ b/Operators.ipynb
@@ -7,8 +7,8 @@
     "\n",
     "# Operators\n",
     "\n",
-    "<!-- <img src=\"images\\operator.gif\" style=\"float: right;\" width=500 height=750  /> -->\n",
-    "<img src=\"images\\operators.jpg\" style=\"float: right;\" width=350 height=350  />\n",
+    "<img src=\"images/operator.gif\" style=\"float: right;\"  />\n",
+    "<!-- <img src=\"images/operators.jpg\" style=\"float: right;\" width=350 height=350  /> -->\n",
     "\n",
     "- [Arithmetic Operators](#Arithmetic_Operators)\n",
     "    - [Addition](#Addition)\n",
