--- a/Operators.ipynb
+++ b/Operators.ipynb
@@ -7,8 +7,8 @@
     "\n",
     "# Operators\n",
     "\n",
-    "<img src=\"images/operator.gif\" style=\"float: right;\"  />\n",
-    "<!-- <img src=\"images/operators.jpg\" style=\"float: right;\" width=350 height=350  /> -->\n",
+    "\n",
+    "\n",
     "\n",
     "- [Arithmetic Operators](#Arithmetic_Operators)\n",
     "    - [Addition](#Addition)\n",
@@ -17,7 +17,8 @@
     "    - [Division](#Division)\n",
     "    - [Floor Division](#Floor_Division)\n",
     "    - [Exponentiation](#Exponentiation)\n",
-    "\n",
+    "<img src=\"images/operator.gif\" style=\"float: right; width=500 height=700\"  />\n",
+    "<!-- <img src=\"images/operators.jpg\" style=\"float: right;\" width=500 height=500  /> -->\n",
     "- [Comparison Operators](#Comparison_Operators)\n",
     "    - [Greater than](#Greater_than)\n",
     "    - [Less than](#Less_than)\n",
