--- a/Operators.ipynb
+++ b/Operators.ipynb
@@ -17,7 +17,7 @@
     "    - [Division](#Division)\n",
     "    - [Floor Division](#Floor_Division)\n",
     "    - [Exponentiation](#Exponentiation)\n",
-    "<img src=\"images/operator.gif\" style=\"float: right; width=500 height=700\"  />\n",
+    "<img src=\"images/operator.gif\" style=\"float: right;\" width=700 height=900  />\n",
     "<!-- <img src=\"images/operators.jpg\" style=\"float: right;\" width=500 height=500  /> -->\n",
     "- [Comparison Operators](#Comparison_Operators)\n",
     "    - [Greater than](#Greater_than)\n",
