--- a/Control Flow.ipynb
+++ b/Control Flow.ipynb
@@ -13,12 +13,10 @@
     "    - [if .. else](#if_else)\n",
     "    - [if .. elif .. else](#if_elif_else)\n",
     "    - [Nested if](#Nested_if)\n",
-    "    - [switch](#switch)\n",
-    "        \n",
+    "    - [switch](#switch) \n",
     "- [Iterative Statements](#Iterative_Statements)\n",
     "    - [for loop](#for)\n",
     "    - [while loop](#while)\n",
-    "\n",
     "- [Functions](#Functions)\n",
     "    - [Arguments Passing](#Arguments_Passing)\n",
     "    - [Default Arguments](#Default_Arguments)\n",
@@ -26,10 +24,7 @@
     "    - [Variable-Length Arguments](#Variable_Length_Arguments)\n",
     "    - [Docstrings](#Docstrings)\n",
     "    - [Lambda Functions](#Lambda_Functions)     \n",
-    "    - [Global, Local and Nonlocal Variables](#Global_Local_Nonlocal_Variables)    \n",
-    "    \n",
-    "    \n",
-    "    "
+    "    - [Global, Local and Nonlocal Variables](#Global_Local_Nonlocal_Variables)"
    ]
   },
   {
