--- a/Data Type.ipynb
+++ b/Data Type.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Data Type\n",
+    "# Data Type\n",
     "\n",
     "- [Numbers](#Numbers)\n",
     "    - [int](#int)\n",
