--- a/Setup And Installation.ipynb
+++ b/Setup And Installation.ipynb
@@ -14,7 +14,7 @@
     "- [Anaconda Distribution Setup](#Anaconda)\n",
     "    - [Windows](#Anaconda_Windows)\n",
     "    - [Ubuntu](#Anaconda_Ubuntu)\n",
-    "- [Google Colab](#Google_Colab)\n"
+    "- [Google Colab](#Google_Colab)"
    ]
   },
   {
